# Usaco_Silver

./: CMakeLists.txt  Test.cpp
CodeForce/: Bear And Displayed Friends.cpp  C Connect.cpp  Chat Ban.cpp  New Year Transportation.cpp  Registration System.cpp  Save More Mice.cpp
UsacoSilver/: BreedCounting.cpp  HaybaleStacking.cpp  Lifeguards.cpp  MyCowAteMyHomework.cpp  PaintingTheBarn.cpp  PaintingTheBarnFaster.cpp  Read Me  SubsequencesSummingtoSevens.cpp
