cmake_minimum_required(VERSION 3.20)
project(XCampSilverUsaco)

set(CMAKE_CXX_STANDARD 14)

add_executable(XCampSilverUsaco main.cpp "CodeForce/C Connect.cpp" "CodeForce/Save More Mice.cpp" "CodeForce/Bear And Displayed Friends.cpp" UsacoSilver/MyCowAteMyHomework.cpp "CodeForce/Registration System.cpp" "CodeForce/New Year Transportation.cpp" "CodeForce/Chat Ban.cpp" Test.cpp UsacoSilver/BreedCounting.cpp "UsacoSilver/SubsequencesSummingtoSevens.cpp")
